# NovaWeb

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c.yml
src/: config.c  config.h  directory.c  directory.h  file.c  file.h  header.h  http_server.c  http_server.h  http_status.c  http_status.h  main.c  mime_types.c  mime_types.h  path.c  path.h  request.c  request.h  response.c  response.h  string.c  string.h  url.c  url.h  virtual_host.c  virtual_host.h
